--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,37 @@
 body {
   font-family: "Arial Black", Gadget, sans-serif;
   color: #212121;
-  background: rgb(167,207,223); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(167,207,223,1) 0%, rgba(35,83,138,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(167,207,223,1) 0%,rgba(35,83,138,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(167,207,223,1) 0%,rgba(35,83,138,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  background: #00d2ff;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #3a7bd5, #00d2ff);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3a7bd5, #00d2ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7cfdf', endColorstr='#23538a',GradientType=0 ); /* IE6-9 */
 }
 .container {
-  background-color: #E0E0E0;
+  background-color: #EEEEEE;
   margin-top: 60px;
   margin-bottom: 60px;
-  border-radius: 50px;
+  -webkit-box-shadow: 0px 1px 78px 0px rgba(0,0,0,0.51);
+  -moz-box-shadow: 0px 1px 78px 0px rgba(0,0,0,0.51);
+  box-shadow: 0px 1px 78px 0px rgba(0,0,0,0.51);
   border: 2px solid #212121;
+  z-index: 100;
+  position: relative;
+  margin-top: -45%;
 }
 h1 {
   display: block;
+  font-family: raleway;
+}
+h2{
+  font-family: 'Baloo', cursive;
+}
+p{
+  font-family: Poppins;
 }
 .main-image img{
     text-align: center;
     display: block;
     margin: auto;
-    border-radius: 50px;
     border: 10px solid #212121;
     
 }
@@ -34,7 +44,18 @@ h1 {
 }
 .content p{
   text-align: justify;
+  font-family: Poppins;
 }
 #trigger2 {
   text-align: center !important;
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js{
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
